--- a/Tap Me/en.lproj/MainStoryboard.storyboard
+++ b/Tap Me/en.lproj/MainStoryboard.storyboard
@@ -1,18 +1,28 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="2">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
+        <deployment version="4384" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ulp-RO-hDl"/>
+                        <viewControllerLayoutGuide type="bottom" id="ldr-DW-3ri"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="Yei-4d-iZg">
+                                <rect key="frame" x="20" y="423" width="335" height="124"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="124" id="XwS-of-4t3"/>
                                 </constraints>
@@ -23,23 +33,24 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JXn-JI-5ZV">
+                                <rect key="frame" x="72" y="251" width="230" height="164"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="230" id="1es-dJ-fao"/>
                                     <constraint firstAttribute="height" constant="164" id="uui-zf-TR9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <state key="normal" title="Tap Me!">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="buttonPressed" destination="2" eventType="touchUpInside" id="dxc-yk-Ip2"/>
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Time: 30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0aQ-yA-WxX">
+                                <rect key="frame" x="132" y="64" width="110" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="Eip-D3-k8B"/>
                                     <constraint firstAttribute="width" constant="110" id="Myy-ZH-YA8"/>
@@ -49,15 +60,15 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="JXn-JI-5ZV" firstAttribute="centerY" secondItem="3" secondAttribute="centerY" type="default" id="31q-Ng-i9C"/>
+                            <constraint firstItem="JXn-JI-5ZV" firstAttribute="centerY" secondItem="3" secondAttribute="centerY" id="31q-Ng-i9C"/>
                             <constraint firstItem="0aQ-yA-WxX" firstAttribute="top" secondItem="3" secondAttribute="top" constant="64" id="3pA-Y1-WIc"/>
-                            <constraint firstItem="Yei-4d-iZg" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="6bw-02-aPn"/>
-                            <constraint firstItem="Yei-4d-iZg" firstAttribute="top" secondItem="JXn-JI-5ZV" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Aaw-4P-VqD"/>
-                            <constraint firstAttribute="trailing" secondItem="Yei-4d-iZg" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="du0-tb-om9"/>
-                            <constraint firstItem="0aQ-yA-WxX" firstAttribute="centerX" secondItem="JXn-JI-5ZV" secondAttribute="centerX" type="default" id="nQV-Ij-dIJ"/>
-                            <constraint firstItem="JXn-JI-5ZV" firstAttribute="centerX" secondItem="Yei-4d-iZg" secondAttribute="centerX" type="default" id="xNn-Lf-DTD"/>
+                            <constraint firstItem="Yei-4d-iZg" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" id="6bw-02-aPn"/>
+                            <constraint firstItem="Yei-4d-iZg" firstAttribute="top" secondItem="JXn-JI-5ZV" secondAttribute="bottom" constant="8" symbolic="YES" id="Aaw-4P-VqD"/>
+                            <constraint firstAttribute="trailing" secondItem="Yei-4d-iZg" secondAttribute="trailing" constant="20" symbolic="YES" id="du0-tb-om9"/>
+                            <constraint firstItem="0aQ-yA-WxX" firstAttribute="centerX" secondItem="JXn-JI-5ZV" secondAttribute="centerX" id="nQV-Ij-dIJ"/>
+                            <constraint firstItem="JXn-JI-5ZV" firstAttribute="centerX" secondItem="Yei-4d-iZg" secondAttribute="centerX" id="xNn-Lf-DTD"/>
                         </constraints>
                     </view>
                     <connections>
@@ -70,9 +81,4 @@
             <point key="canvasLocation" x="-141" y="80"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination"/>
-    </simulatedMetricsContainer>
 </document>
